--- a/introductionCard/style.css
+++ b/introductionCard/style.css
@@ -7,12 +7,12 @@ table{
 }
 body {
    background-color: #486d46;            /* 背景色 */
-   background-image: url("background2.jpg");  /* 画像 */
+   background-image: url("background3.jpg");  /* 画像 */
    background-size: cover;               /* 全画面 */
    background-attachment: fixed;         /* 固定 */
    background-position: center center;   /* 縦横中央 */
-   font-family: 'Fredoka One', cursive, 'Nico Moji';
+   font-family: 'Nico Moji';
 }
 h1 {
-   font-family: 'Fredoka One', cursive, 'Nico Moji';
+   font-family: 'Nico Moji';
 }
