--- a/introductionCard/style.css
+++ b/introductionCard/style.css
@@ -1,19 +1,31 @@
 h1{
-    font-size:50px;
-    font-family: "メイリオ";
+  font-size:50px;
+  font-family: "メイリオ";
 }
-table, td, th {
-    border: 2px #000000 solid;
-    font-size:35px;
+a {
+  font-size:30px;
 }
 body {
-   background-color: #486d46;            /* 背景色 */
-   background-image: url("background3.jpg");  /* 画像 */
-   background-size: cover;               /* 全画面 */
-   background-attachment: fixed;         /* 固定 */
-   background-position: center center;   /* 縦横中央 */
-   font-family: 'Nico Moji';
+  font-size:40px;
+}
+table, td, th {
+  border: 2px #000000 solid;
+  font-size:30px;
+}
+table > tbody > tr {
+  counter-increment: rowCount;
+}
+table > tbody > tr > td:first-child::before {
+  content: counter(rowCount);
+}
+body {
+  background-color: #486d46;            /* 背景色 */
+  background-image: url("background3.jpg");  /* 画像 */
+  background-size: cover;               /* 全画面 */
+  background-attachment: fixed;         /* 固定 */
+  background-position: center center;   /* 縦横中央 */
+  font-family: 'Nico Moji';
 }
 h1 {
-   font-family: 'Nico Moji';
+  font-family: 'Nico Moji';
 }
