--- a/introductionCard/style.css
+++ b/introductionCard/style.css
@@ -20,7 +20,7 @@ table > tbody > tr > td:first-child::before {
 }
 body {
   background-color: #486d46;            /* 背景色 */
-  background-image: url("background4.jpg");  /* 画像 */
+  background-image: url("background7.png");  /* 画像 */
   background-size: cover;               /* 全画面 */
   background-attachment: fixed;         /* 固定 */
   background-position: center center;   /* 縦横中央 */
